--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
 <body>
     <h1>ROCK, PAPER, SCISSORS</h1>
     <h2>L'ETS PLAY UP TO 5!</h2>
+
     <div class="scores">
         <div>
             <h3>YOU</h3>
@@ -27,11 +28,15 @@
         <button id="scissors"><img src="Pictures/scissors.JPG"></button>
     </div>
 
-    <p id="gameResult"></p>
+    </div>
+    <h3>RESULTS</h3>
+    <div id="oneRoundResult"></div>
 
     <div>
         <button class="reset" id="reset">Play Again!</button>
     </div>
+
+    <p id="gameResult"></p>
 
     <script src="main.js"></script>
 </body>
