--- a/game.html
+++ b/game.html
@@ -23,9 +23,9 @@
     </div>
 
     <div id="buttons" class="buttons">
-        <button id="rock"><img src="Pictures/rock.JPG"></button>
-        <button id="paper"><img src="Pictures/paper.JPG"></button>
-        <button id="scissors"><img src="Pictures/scissors.JPG"></button>
+        <button id="rock"><img src="Pictures/rock.JPG" alt="rock"></button>
+        <button id="paper"><img src="Pictures/paper.JPG" alt="paper"></button>
+        <button id="scissors"><img src="Pictures/scissors.JPG" alt="scissors"></button>
     </div>
 
     </div>
