--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 
     <p id="gameResult"></p>
 
-    <script src="main.js"></script>
+
 </body>
 
 </html>
