--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>ROCK, PAPER, SCISSORS</h1>
-    <h2>L'ETS PLAY UP TO 5!</h2>
+    <h2>LET'S PLAY UP TO 5!</h2>
 
     <div class="scores">
         <div>
